v2-website/versioned_docs/version-0.30/view-style-props.md
---
id: view-style-props
title: View Style Props
original_id: view-style-props
---

### Props

- [`borderRightColor`](view-style-props.md#borderrightcolor)
- [`backfaceVisibility`](view-style-props.md#backfacevisibility)
- [`borderBottomColor`](view-style-props.md#borderbottomcolor)
- [`borderBottomLeftRadius`](view-style-props.md#borderbottomleftradius)
- [`borderBottomRightRadius`](view-style-props.md#borderbottomrightradius)
- [`borderBottomWidth`](view-style-props.md#borderbottomwidth)
- [`borderColor`](view-style-props.md#bordercolor)
- [`borderLeftColor`](view-style-props.md#borderleftcolor)
- [`borderLeftWidth`](view-style-props.md#borderleftwidth)
- [`borderRadius`](view-style-props.md#borderradius)
- [`backgroundColor`](view-style-props.md#backgroundcolor)
- [`borderRightWidth`](view-style-props.md#borderrightwidth)
- [`borderStyle`](view-style-props.md#borderstyle)
- [`borderTopColor`](view-style-props.md#bordertopcolor)
- [`borderTopLeftRadius`](view-style-props.md#bordertopleftradius)
- [`borderTopRightRadius`](view-style-props.md#bordertoprightradius)
- [`borderTopWidth`](view-style-props.md#bordertopwidth)
- [`borderWidth`](view-style-props.md#borderwidth)
- [`opacity`](view-style-props.md#opacity)
- [`overflow`](view-style-props.md#overflow)
- [`elevation`](view-style-props.md#elevation)

---

# Reference

## Props

### `borderRightColor`

| Type               | Required |
| ------------------ | -------- |
| [color](colors.md) | No       |

---

### `backfaceVisibility`

| Type                                        | Required |
| ------------------------------------------- | -------- |
| ReactPropTypes.oneOf(['visible', 'hidden']) | No       |

---

### `borderBottomColor`

| Type               | Required |
| ------------------ | -------- |
| [color](colors.md) | No       |

---

### `borderBottomLeftRadius`

| Type                  | Required |
| --------------------- | -------- |
| ReactPropTypes.number | No       |

---

### `borderBottomRightRadius`

| Type                  | Required |
| --------------------- | -------- |
| ReactPropTypes.number | No       |

---

### `borderBottomWidth`

| Type                  | Required |
| --------------------- | -------- |
| ReactPropTypes.number | No       |

---

### `borderColor`

| Type               | Required |
| ------------------ | -------- |
| [color](colors.md) | No       |

---

### `borderLeftColor`

| Type               | Required |
| ------------------ | -------- |
| [color](colors.md) | No       |

---

### `borderLeftWidth`

| Type                  | Required |
| --------------------- | -------- |
| ReactPropTypes.number | No       |

---

### `borderRadius`

| Type                  | Required |
| --------------------- | -------- |
| ReactPropTypes.number | No       |

---

### `backgroundColor`

| Type               | Required |
| ------------------ | -------- |
| [color](colors.md) | No       |

---

### `borderRightWidth`

| Type                  | Required |
| --------------------- | -------- |
| ReactPropTypes.number | No       |

---

### `borderStyle`

| Type                                                | Required |
| --------------------------------------------------- | -------- |
| ReactPropTypes.oneOf(['solid', 'dotted', 'dashed']) | No       |

---

### `borderTopColor`

| Type               | Required |
| ------------------ | -------- |
| [color](colors.md) | No       |

---

### `borderTopLeftRadius`

| Type                  | Required |
| --------------------- | -------- |
| ReactPropTypes.number | No       |

---

### `borderTopRightRadius`

| Type                  | Required |
| --------------------- | -------- |
| ReactPropTypes.number | No       |

---

### `borderTopWidth`

| Type                  | Required |
| --------------------- | -------- |
| ReactPropTypes.number | No       |

---

### `borderWidth`

| Type                  | Required |
| --------------------- | -------- |
| ReactPropTypes.number | No       |

---

### `opacity`

| Type                  | Required |
| --------------------- | -------- |
| ReactPropTypes.number | No       |

---

### `overflow`

| Type                                        | Required |
| ------------------------------------------- | -------- |
| ReactPropTypes.oneOf(['visible', 'hidden']) | No       |

---

### `elevation`

(Android-only) Sets the elevation of a view, using Android's underlying [elevation API](https://developer.android.com/training/material/shadows-clipping.html#Elevation). This adds a drop shadow to the item and affects z-order for overlapping views. Only supported on Android 5.0+, has no effect on earlier versions.

| Type                  | Required | Platform |
| --------------------- | -------- | -------- |
| ReactPropTypes.number | No       | Android  |
